--- a/src/app/pages/user/login/login.component.html
+++ b/src/app/pages/user/login/login.component.html
@@ -1,26 +1,35 @@
-<div class="container p-3 text-center">
-    <div class="card w-50">
-        <div class="card-header text-center">
-            <h4>Login Page</h4>
-        </div>
-        <div class="card-body">
-            <form [formGroup]="loginForm" class="form p-0">
-                <div class="row">
-                    <mat-form-field appearance="outline">
-                        <mat-label>Mobile Number</mat-label>
-                        <input type="tel" matInput #input maxlength="10" required formControlName='mobile_no'>
-                        <mat-hint align="end">{{input.value?.length || 0}} / 10</mat-hint>
-                    </mat-form-field>
-                </div>
-                <div class="form-group text-right">
-                    <button class="btn btn-success my-3" (click)='onLogin(input.value)'>
-                        Login
-                    </button>
-                </div>
-                <div class="form-group">
-                    <a class="btn" (click)='onRegister()'>New User? Register for account</a>
-                </div>
-            </form>
-        </div>
+<div class="container-fluid">
+  <div class="row">
+    <div class="col-sm-12 col-lg-12 col-md-12 text-right p-0">
+      <button mat-button (click)='closeDialog()' class="close-button">
+        <mat-icon>close</mat-icon>
+      </button>
     </div>
+  </div>
+  <div class="container text-center">
+    <div class="row my-3">
+      <div class="col-sm-12 col-lg-12 col-md-12 text-center">
+        <h4>Login Page</h4>
+      </div>
+    </div>
+    <div class="row my-3">
+      <div class="col-sm-12 col-lg-12 col-md-12 text-center">
+        <mat-radio-group aria-label="Choose Login Mode" color="primary" [(ngModel)]="loginType" (change)="onLoginTypeChange($event)">
+          <mat-radio-button value="customer" >Customer</mat-radio-button>
+          <mat-radio-button value="partner" class="mx-3">Partner</mat-radio-button>
+        </mat-radio-group>
+      </div>
+    </div>
+    <form [formGroup]="loginForm" class="form p-0">
+      <formly-form [fields]="fields" [form]="loginForm"></formly-form>
+      <div class="form-group text-right">
+        <button mat-raised-button color="primary" type="submit" (click)="onLogin($event)" class="btn btn-success my-3">
+          Login
+        </button>
+      </div>
+      <div class="form-group">
+        <a class="btn" (click)='onRegister()'>New User? Register for account</a>
+      </div>
+    </form>
+  </div>
 </div>
