--- a/src/app/pages/user/login/login.component.scss
+++ b/src/app/pages/user/login/login.component.scss
@@ -1,26 +1,38 @@
+.mat-dialog-container {
+  display: block;
+  padding: 0 !important;
+  border-radius: 4px;
+  box-sizing: border-box;
+  overflow: auto;
+  outline: 0;
+  width: 100%;
+  height: 100%;
+  min-height: inherit;
+  max-height: inherit;
+}
+
 .container {
-    .card {
-        position: absolute;
-        top: 50%;
-        left: 50%;
-        transform: translate(-50%, -50%);
-        width: 50%;
-        text-align: center;
+    // .card {
+    //     position: absolute;
+    //     top: 50%;
+    //     left: 50%;
+    //     transform: translate(-50%, -50%);
+    //     text-align: center;
 
-        .card-body {
-            .form {
-                margin: 0 auto;
-                padding: 0;
-                .row {
-                    width: 100%;
-                    margin: 0 auto;
+    //     .card-body {
+    //         .form {
+    //             margin: 0 auto;
+    //             padding: 0;
+    //             .row {
+    //                 width: 100%;
+    //                 margin: 0 auto;
 
-    
-                    .mat-form-field {
-                        width: 100%;
-                    }
-                }
-            }
-        }
-    }
+
+    //                 .mat-form-field {
+    //                     width: 100%;
+    //                 }
+    //             }
+    //         }
+    //     }
+    // }
 }
