--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,4 +1,43 @@
 /* You can add global styles to this file, and also import other style files */
+@import '~ngx-owl-carousel-o/lib/styles/scss/owl.carousel';
+@import '~ngx-owl-carousel-o/lib/styles/scss/owl.theme.default';
+@import '~animate.css/animate.min';
 
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+
+
+.nav-link {
+  cursor: pointer;
+}
+
+.title-center {
+  display: block;
+  text-align: center;
+  margin: 15px 0;
+}
+
+.mat-dialog-container {
+  display: block;
+  padding: 0 !important;
+  border-radius: 4px;
+  box-sizing: border-box;
+  overflow: auto;
+  outline: 0;
+  width: 100%;
+  height: 100%;
+  min-height: inherit;
+  max-height: inherit;
+}
+.mat-button.close-button {
+  background-color: transparent !important;
+  transition: background-color 0.3s;
+  border: none !important;
+  outline: none !important;
+  &:hover {
+    background-color: #eee;
+  }
+}
+.mat-button.mat-primary .mat-button-focus-overlay {
+  background-color: transparent;
+}
